# mazaryn-desktop

./: About.qml  CMakeLists.txt  Careers.qml  Contact.qml  Login.qml  Main.qml  PrivacyPolicy.qml  README.md  ResetPass.qml  Signup.qml  loginhandler.cpp  loginhandler.h  main.cpp  qml.qrc  resetpasswordhandler.cpp  resetpasswordhandler.h  signuphandler.cpp  signuphandler.h
